<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.luckyraven</groupId>
    <artifactId>gangland_warfare</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>Gangland Warfare</name>
    <description>Rival gangs battling for control in Minecraft.</description>
    <developers>
        <developer>
            <name>LuckyRaven10</name>
        </developer>
    </developers>

    <modules>
        <module>gangland-impl</module>
        <module>gangland-build</module>
        <module>gangland-core</module>
        <module>gangland-item</module>

        <module>gangland-ui</module>
        <module>gangland-features</module>

        <module>plugin-common</module>
        <module>plugin-persistence</module>

        <!-- Compatibility modules -->
        <module>gangland-compatibility</module>
        <module>gangland-compatibility/version-impl</module>
        <module>gangland-compatibility/version-1_10_R1</module>
        <module>gangland-compatibility/version-1_11_R1</module>
        <module>gangland-compatibility/version-1_12_R1</module>
        <module>gangland-compatibility/version-1_13_R1</module>
        <module>gangland-compatibility/version-1_13_R2</module>
        <module>gangland-compatibility/version-1_14_R1</module>
        <module>gangland-compatibility/version-1_15_R1</module>
        <module>gangland-compatibility/version-1_16_R1</module>
        <module>gangland-compatibility/version-1_16_R2</module>
        <module>gangland-compatibility/version-1_16_R3</module>
        <module>gangland-compatibility/version-1_17_R1</module>
        <module>gangland-compatibility/version-1_18_R1</module>
        <module>gangland-compatibility/version-1_18_R2</module>
        <module>gangland-compatibility/version-1_19_R1</module>
        <module>gangland-compatibility/version-1_19_R2</module>
        <module>gangland-compatibility/version-1_19_R3</module>
        <module>gangland-compatibility/version-1_20_R1</module>
        <module>gangland-compatibility/version-1_20_R2</module>
        <module>gangland-compatibility/version-1_20_R3</module>
        <module>gangland-compatibility/version-1_20_R4</module>
        <module>gangland-compatibility/version-1_21_R1</module>
        <module>gangland-compatibility/version-1_21_R2</module>
        <module>gangland-compatibility/version-1_21_R3</module>
        <module>gangland-compatibility/version-1_21_R4</module>
        <module>gangland-compatibility/version-1_21_R5</module>
        <module>gangland-compatibility/version-1_21_R6</module>
        <module>gangland-compatibility/version-1_21_R7</module>
    </modules>

    <properties>
        <revision>0.7.4-DEV</revision>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- The version used to run the plugin -->
        <bukkit.version>1.21.11-R0.1-SNAPSHOT</bukkit.version>

        <!-- Dependencies/Libraries versions -->
        <nbt.version>2.15.6</nbt.version>
        <xseries.version>13.6.0</xseries.version>
        <anvilgui.version>1.10.11-SNAPSHOT</anvilgui.version>
        <fastboard.version>2.1.5</fastboard.version>
        <viaversion.version>5.8.1</viaversion.version>
        <placeholderapi.version>2.12.2</placeholderapi.version>
        <vault.version>1.7.1</vault.version>
        <citizen.version>2.0.41-SNAPSHOT</citizen.version>

        <bstats.version>3.2.1</bstats.version>

        <hikaricp.version>7.0.2</hikaricp.version>
        <org.reflections.version>0.10.2</org.reflections.version>
        <exp4j.version>0.4.8</exp4j.version>

        <junit.version>6.0.3</junit.version>
        <mockito.version>5.23.0</mockito.version>
        <lombok.version>1.18.44</lombok.version>
        <annotations.version>26.1.0</annotations.version>
        <log4j-slf4j2.version>3.0.0-beta2</log4j-slf4j2.version>
        <sqlite-jdbc.version>3.51.2.0</sqlite-jdbc.version>
        <maven-surefire-plugin.version>3.5.5</maven-surefire-plugin.version>
    </properties>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>maven_central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>

        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>

        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>

        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>

        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
            <layout>default</layout>
        </repository>

        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>

        <repository>
            <id>citizens-repo</id>
            <url>https://maven.citizensnpcs.co/repo</url>
        </repository>

        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>

        <repository>
            <id>viaversion-repo</id>
            <url>https://repo.viaversion.com</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>me.luckyraven</groupId>
                <artifactId>plugin-common</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>net.citizensnpcs</groupId>
                <artifactId>citizens-main</artifactId>
                <version>${citizen.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.cryptomorin</groupId>
                <artifactId>XSeries</artifactId>
                <version>${xseries.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Technical provided level dependencies (start) -->

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- jetbrains annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${annotations.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Log4j-Slf4j -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${log4j-slf4j2.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Technical provided level dependencies (end) -->
    </dependencies>

</project>
